WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282847
[JSCOnly] Building fails with EVENT_LOOP_TYPE=GLib
https://bugs.webkit.org/show_bug.cgi?id=282847
Summary
[JSCOnly] Building fails with EVENT_LOOP_TYPE=GLib
Adrian Perez
Reported
2024-11-08 11:49:28 PST
Steps to reproduce: cmake -Bbuild-jsc -DPORT=JSCOnly -GNinja -DEVENT_LOOP_TYPE=GLib ninja -Cbuild-jsc
Attachments
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2024-11-08 11:54:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36411
EWS
Comment 2
2024-11-10 05:24:14 PST
Committed
286404@main
(c73cb00c98f8): <
https://commits.webkit.org/286404@main
> Reviewed commits have been landed. Closing PR #36411 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug