Cherry-pick 286404@main (c73cb00c98f8). https://bugs.webkit.org/show_bug.cgi?id=282847

[JSCOnly] Building fails with EVENT_LOOP_TYPE=GLib
    https://bugs.webkit.org/show_bug.cgi?id=282847

    Reviewed by Yusuke Suzuki.

    Apply the minimum set of changes that allow building JSCOnly again with
    EVENT_LOOP_TYPE=GLib. This mainly boils down adding missing headers,
    sources and compile options for the different targets.

    * Source/WTF/wtf/PlatformJSCOnly.cmake: List missing sources, building
      with GLib now needs FileSystemPOSIX.cpp and UniStdExtrasUnix.cpp as
      well; list WTF public glib-related headers needed for the JSCOnly
      build.
    * Source/WTF/wtf/glib/GRefPtr.h: Remove unneeded forward declaration for
      g_object_ref_sink(), which caused issues when building JSCOnly.
    * Source/WTF/wtf/glib/Sandbox.cpp:
      (WTF::sandboxedUserRuntimeDirectory): Define a base directory for the
      JSCOnly port, which was missing.
    * Tools/TestWebKitAPI/PlatformJSCOnly.cmake: List the GLib include
      directories to let the compiler find the headers.

    Canonical link: https://commits.webkit.org/286404@main

Canonical link: https://commits.webkit.org/282416.281@webkitglib/2.46